--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <header class="fixed w-full hidden  overflow-hidden px-[50px] z-[100]">
-        <div class="flex bg-white py-3 px-6 mt-6 rounded-[50px] justify-between items-center ">
+        <div class="flex bg-white py-3 px-6 mt-5 rounded-[50px] justify-between items-center ">
             <div class="left_header_menu">
-                <ul class="flex gap-[70px]">
+                <ul class="flex gap-7">
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT US</a></li>
                     <li><a href="#">PRODUCTS</a></li>
@@ -23,7 +23,7 @@
                 <img src="./image/Dipankar_logo-removebg-preview.png" alt="" class="w-full h-13">
             </div>
             <div class="right_header_menu">
-                <ul class="flex gap-[70px]">
+                <ul class="flex gap-7">
                     <li><a href="#">RECIPIE </a></li>
                     <li><a href="#">HAPPYCLIENTS</a></li>
                     <li><a href="#">KNOWLEDGE</a></li>
