--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </section>
 
 
-    <section class="all-packet-main-section w-full h-screen flex flex-col justify-between">
-        <div class="upper-yellow-wrapper ">
+    <section class="all-packet-main-section hidden w-full h-screen flex flex-col justify-between">
+        <div class="upper-yellow-wrapper">
             <img src="./image/yellow-outline-1.png" alt="" class="w-full">
         </div>
 
@@ -83,7 +83,7 @@
         </div>
     </section>
 
-    <section class="about-us-main w-full h-screen">
+    <section class="about-us-main w-full h-screen hidden">
         <div class="about-us-main-content">
             <div class="about-us-tag w-[30%] bg-amber-300 py-3 flex justify-center rounded-[15px]">
                 <div class="">
